--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <h1>Etch-a-Sketch</h1>
-    <div class="container"></div>
+    <div class="gridContainer">
+       <div class="container"></div> 
+    </div>
     <script src="./js/etch.js"></script>
 </body>
 </html>
