--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <div class="gridContainer">
        <div class="container"></div> 
     </div>
+    <div class="gridSize">
+        <label for="size">Type a grid size: <input type="number" name="size" id="size" min="1" max="100"></label>
+    </div>
+    
     <script src="./js/etch.js"></script>
 </body>
 </html>
