--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </div>
     <div class="gridSize">
         <label for="size">Type a grid size: <input type="number" name="size" id="size" min="1" max="100"></label>
+        <button type="submit" id="updateGrid" onclick="updateGrid()">Submit</button>
     </div>
     
     <script src="./js/etch.js"></script>
