--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div class="gridSize">
         <label for="size">Type a grid size: <input type="number" name="size" id="size" min="1" max="100"></label>
         <button type="submit" id="updateGrid" onclick="updateGrid()">Submit</button>
+        <button type="submit" id="reset" onclick="resetGrid()">Reset</button>
     </div>
     
     <script src="./js/etch.js"></script>
